--- a/ingex.html
+++ b/ingex.html
@@ -123,7 +123,44 @@
             </li>
         </ul>
     </section>
-
+    <section>
+        <h2>Постоянные клиенты</h2>
+        <ul>
+            <li><img src="./img/logo1.svg" alt="logo1"></li>
+            <li><img src="./img/logo2.svg" alt="logo2"></li>
+            <li><img src="./img/logo3.svg" alt="logo3"></li>
+            <li><img src="./img/logo4.svg" alt="logo4"></li>
+            <li><img src="./img/logo5.svg" alt="logo5"></li>
+            <li><img src="./img/logo6.svg" alt="logo6"></li>
+        </ul>
+    </section>
     </main>
+    <footer>
+        <address>
+            <a href="">Web Studio</a><br>
+            г. Киев, пр-т Леси Украинки, 26 <br>
+            <ul>
+                <li><a href="mailto:info@example.com">info@example.com</a></li>
+                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
+        </address>
+        <section>
+            <h2>присоединяйтесь</h2>
+            <ul>
+                <li><img src="./img/instagram.svg" alt="icon"></li>
+                <li><img src="./img/twitter.png" alt="icon"></li>
+                <li><img src="./img/facebook.svg" alt="icon"></li>
+                <li><img src="./img/linkedin.svg" alt="icon"></li>
+            </ul>
+        </section>
+        <section>
+            <h3>подписаться на рассылку</h3>
+            <input type="text">E-mail
+            <button>
+               <link rel="stylesheet" href="Web-Studio">Подписаться
+            </button>
+        </section>
+        <p>2020 | Developed by GoIT Students </p>
+    </footer>
 </body>
 </html>
