--- a/ingex.html
+++ b/ingex.html
@@ -61,15 +61,15 @@
         <ul>
             <li>
                 <a href="">Десктопные приложения
-                <img src="./img/leptop.png" alt="leptop"></a> 
+                <img src="./img/leptop.png" alt="leptop" width="380" height="295"></a> 
             </li>
             <li>
                 <a href="">Мобильные приложения
-                <img src="./img/box.png" alt="box"></a>
+                <img src="./img/box.png" alt="box" width="380" height="295"></a>
             </li>
             <li>
                 <a href="">Дизайнерские решения
-                <img src="./img/screen.png" alt="screen"></a>
+                <img src="./img/screen.png" alt="screen" width="380" height="295"></a>
             </li>
         </ul>   
     </section>
@@ -78,7 +78,7 @@
         <h2>Наша команда</h2> 
         <ul>
             <li>
-                <img src="./img/img2.png" alt="foto">
+                <img src="./img/img2.png" alt="foto" width="280" height="260">
                 <h3>John Smith</h3>
                 <p>Product Designer</p>
                 <ul>
@@ -89,7 +89,7 @@
                 </ul>
             </li>
             <li>
-                <img src="./img/img3.png" alt="foto">
+                <img src="./img/img3.png" alt="foto" width="280" height="260">
                 <h3>Marta Stewart</h3>
                 <p>Frontend Developer</p>
                 <ul>
@@ -100,7 +100,7 @@
                 </ul>
             </li>
             <li>
-                <img src="./img/img4.png" alt="foto">
+                <img src="./img/img4.png" alt="foto" width="280" height="260">
                 <h3>Robert Jakis</h3>
                 <p>Marketing</p>
                 <ul>
@@ -111,7 +111,7 @@
                 </ul>
             </li>
             <li>
-                <img src="./img/img5.png" alt="foto">
+                <img src="./img/img5.png" alt="foto" width="280" height="260">
                 <h3>Martin Doe</h3>
                 <p>UI Designer</p>
                 <ul>
@@ -138,28 +138,28 @@
     <footer>
         <address>
             <a href="">Web Studio</a><br>
-            г. Киев, пр-т Леси Украинки, 26 <br>
-            <ul>
-                <li><a href="mailto:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-            </ul>
+            г. Киев, пр-т Леси Украинки, 26 
         </address>
-        <section>
-            <h2>присоединяйтесь</h2>
+        <address>
+                <a href="mailto:info@example.com">info@example.com</a><br>
+                <a href="tel:+380991111111">+38 099 111 11 11</a>
+        </address>
+        <div>
+            <b>присоединяйтесь</b>
             <ul>
-                <li><img src="./img/instagram.svg" alt="icon"></li>
-                <li><img src="./img/twitter.png" alt="icon"></li>
-                <li><img src="./img/facebook.svg" alt="icon"></li>
-                <li><img src="./img/linkedin.svg" alt="icon"></li>
+                <li><a href="" aria-label="instagram"></a></li>
+                <li><a href="" aria-label="twitter"></a></li>
+                <li><a href="" aria-label="facebook"></a></li>
+                <li><a href="" aria-label="linkedin"></a></li>
             </ul>
-        </section>
-        <section>
-            <h2>подписаться на рассылку</h2>
+        </div>
+        <div>
+            <b>подписаться на рассылку</b>
             <input type="text">E-mail
             <button>
                <link rel="stylesheet" href="Web-Studio">Подписаться
             </button>
-        </section>
+        </div>
         <p>2020 | Developed by GoIT Students </p>
     </footer>
 </body>
