--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
         <!-- Навігація -->
         <nav>
             <ul>
-                <li><a href="">Web Studio</a></li>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+                <li class="logotyp"><a href=""><span class="logo" >Web</span> Studio</a></li>
+                <li class="posul-logo" class="link"><a href="">Студия</a></li>
+                <li class="posul-logo" class="link"><a href="">Портфолио</a></li>
+                <li class="posul-logo" class="link"><a href="">Контакты</a></li>
             </ul>
             <ul>
-                <li><a href="mailto:"><img src="./img/envelope.svg" alt="Іконка" />info@devstudio.com</a></li>
+                <li><a href="mailto:" class="link"><img src="./img/envelope.svg" alt="Іконка" />info@devstudio.com</a></li>
                 <li><a href="tel:+"><img src="./img/mobile.svg" alt="Ikonka"> +38 096 111 11 11</a></li>
             </ul>
         </nav>
@@ -25,7 +26,7 @@
             <!-- Банер -->
     <section>
         <h1>эффективные решения <br> для вашего бизнеса</h1>
-        <button>
+        <button class="link">
             Заказать услугу 
         </button>
     </section>
@@ -34,7 +35,7 @@
         <h2>Как занимаемся</h2>
         <ul>
             <li>
-                <img src="./img/Antena.svg" alt="Antena">
+                <img class="link" src="./img/Antena.svg" alt="Antena">
                 <h3>Внимание к деталям</h3>
                 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
@@ -81,44 +82,44 @@
                 <img src="./img/img2.png" alt="foto" width="280" height="260">
                 <h3>John Smith</h3>
                 <p>Product Designer</p>
-                <ul>
-                    <li><img src="./img/instagram.svg" alt="icon"></li>
-                    <li><img src="./img/twitter.png" alt="icon"></li>
-                    <li><img src="./img/facebook.svg" alt="icon"></li>
-                    <li><img src="./img/linkedin.svg" alt="icon"></li>
+                <ul class="social-links">
+                    <li class="link"><img  src="./img/instagram.svg" alt="icon"></li>
+                    <li class="link"><img src="./img/twitter.png" alt="icon"></li>
+                    <li class="link"><img src="./img/facebook.svg" alt="icon"></li>
+                    <li class="link"><img src="./img/linkedin.svg" alt="icon"></li>
                 </ul>
             </li>
             <li>
                 <img src="./img/img3.png" alt="foto" width="280" height="260">
                 <h3>Marta Stewart</h3>
                 <p>Frontend Developer</p>
-                <ul>
-                    <li><img src="./img/instagram.svg" alt="icon"></li>
-                    <li><img src="./img/twitter.png" alt="icon"></li>
-                    <li><img src="./img/facebook.svg" alt="icon"></li>
-                    <li><img src="./img/linkedin.svg" alt="icon"></li>
+                <ul class="social-links">
+                    <li class="link"><img src="./img/instagram.svg" alt="icon"></li>
+                    <li class="link"><img src="./img/twitter.png" alt="icon"></li>
+                    <li class="link"><img src="./img/facebook.svg" alt="icon"></li>
+                    <li class="link"><img src="./img/linkedin.svg" alt="icon"></li>
                 </ul>
             </li>
             <li>
                 <img src="./img/img4.png" alt="foto" width="280" height="260">
                 <h3>Robert Jakis</h3>
                 <p>Marketing</p>
-                <ul>
-                    <li><img src="./img/instagram.svg" alt="icon"></li>
-                    <li><img src="./img/twitter.png" alt="icon"></li>
-                    <li><img src="./img/facebook.svg" alt="icon"></li>
-                    <li><img src="./img/linkedin.svg" alt="icon"></li>
+                <ul class="social-links">
+                    <li class="link"><img src="./img/instagram.svg" alt="icon"></li>
+                    <li class="link"><img src="./img/twitter.png" alt="icon"></li>
+                    <li class="link"><img src="./img/facebook.svg" alt="icon"></li>
+                    <li class="link"><img src="./img/linkedin.svg" alt="icon"></li>
                 </ul>
             </li>
             <li>
                 <img src="./img/img5.png" alt="foto" width="280" height="260">
                 <h3>Martin Doe</h3>
                 <p>UI Designer</p>
-                <ul>
-                    <li><img src="./img/instagram.svg" alt="icon"></li>
-                    <li><img src="./img/twitter.png" alt="icon"></li>
-                    <li><img src="./img/facebook.svg" alt="icon"></li>
-                    <li><img src="./img/linkedin.svg" alt="icon"></li>
+                <ul class="social-links">
+                    <li class="link"><img src="./img/instagram.svg" alt="icon"></li>
+                    <li class="link"><img src="./img/twitter.png" alt="icon"></li>
+                    <li class="link"><img src="./img/facebook.svg" alt="icon"></li>
+                    <li class="link"><img src="./img/linkedin.svg" alt="icon"></li>
                 </ul>
             </li>
         </ul>
@@ -137,7 +138,7 @@
     </main>
     <footer>
         <address>
-            <a href="">Web Studio</a><br>
+            <a href="" class="logotyp"><span class="logo" >Web</span> Studio</a><br>
             г. Киев, пр-т Леси Украинки, 26 
         </address>
         <address>
@@ -146,8 +147,8 @@
         </address>
         <div>
             <b>присоединяйтесь</b>
-            <ul>
-                <li><a href="" aria-label="instagram"></a></li>
+            <ul class="social-links">
+                <li class="link"><a href="" aria-label="instagram"></a></li>
                 <li><a href="" aria-label="twitter"></a></li>
                 <li><a href="" aria-label="facebook"></a></li>
                 <li><a href="" aria-label="linkedin"></a></li>
