--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet"> 
 </head>
 <body class="wraper">
     <header>
         <!-- Навігація -->
         <nav class="nav">
-            <a href=""><span class="logo">Web</span> Studio</a>
+            <a class="logo" href=""><span class="logotyp">Web</span> Studio</a>
             <ul class="nav-link">
-                <li class="posul-logo"><a href="">Студия</a></li>
-                <li class="posul-logo"><a href="">Портфолио</a></li>
-                <li class="posul-logo"><a href="">Контакты</a></li>
+                <li><a class="posul-logo" href="">Студия</a></li>
+                <li><a class="posul-logo" href="">Портфолио</a></li>
+                <li><a class="posul-logo" href="">Контакты</a></liclass=>
             </ul>
             <ul class="nav-line">
                 <li><a href="mailto:" class="nav-mail" aria-label="mail"></a>
@@ -32,7 +32,7 @@
             Заказать услугу 
         </button>
     </section>
-    <!-- Как занимаемся -->
+    <!-- zanyattya -->
     <section class="zanyattya">
         
         <ul class="line">
@@ -75,12 +75,12 @@
     </section>
     <!-- Наша команда -->
     <section class="nawa-komanda">
-        <h2>Наша команда</h2> 
-        <ul class="line">
+        <h2 class="komanda-title">Наша команда</h2> 
+        <ul class="komand-line">
             <li class="komand">
-                <img src="./img/img2.png" alt="foto" width="280" height="260">
-                <h3>John Smith</h3>
-                <p>Product Designer</p>
+                <img src="./img/img2.png" alt="foto" width="278" height="260">
+                <h3 class="komand-name">John Smith</h3>
+                <p class="komand-text">Product Designer</p>
                 <!--помилка 1 <ul class="social-links">
                     <li class="link"><img src="./img/instagram.svg" alt="icon"></li>
                     <li class="link"><img src="./img/twitter.png" alt="icon"></li>
@@ -98,16 +98,16 @@
                         <a href=""><img src="./img/linkedin.svg" alt="icon"></a></li>
                 </ul> -->
                 <ul class="social-links">
-                    <li class="link-instagram"><a href="https://www.instagram.com" aria-label="instagram"></a></li>
+                    <li class="link-instagram"><a href="https://www.instagram.com"  aria-label="instagram"></a></li>
                     <li class="link-twitter"><a href="https://twitter.com" aria-label="twitter"></a></li>
                     <li class="link-facebook"><a href="https://www.facebook.com" aria-label="facebook"></a></li>
                     <li class="link-linkedin"><a href="https://www.linkedin.com/" aria-label="linkedin"></a></li>
                 </ul>
             </li>
             <li class="komand">
-                <img src="./img/img3.png" alt="foto" width="280" height="260">
-                <h3>Marta Stewart</h3>
-                <p>Frontend Developer</p>
+                <img src="./img/img3.png" alt="foto" width="278" height="260">
+                <h3 class="komand-name">Marta Stewart</h3>
+                <p class="komand-text">Frontend Developer</p>
                
                 <ul class="social-links">
                     <li class="link-instagram"><a href="https://www.instagram.com" aria-label="instagram"></a></li>
@@ -117,9 +117,9 @@
                 </ul>
             </li>
             <li class="komand">
-                <img src="./img/img4.png" alt="foto" width="280" height="260">
-                <h3>Robert Jakis</h3>
-                <p>Marketing</p>
+                <img src="./img/img4.png" alt="foto" width="278" height="260">
+                <h3 class="komand-name">Robert Jakis</h3>
+                <p class="komand-text">Marketing</p>
                 <ul class="social-links">
                     <li class="link-instagram"><a href="https://www.instagram.com" aria-label="instagram"></a></li>
                     <li class="link-twitter"><a href="https://twitter.com" aria-label="twitter"></a></li>
@@ -128,9 +128,9 @@
                 </ul>
             </li>
             <li class="komand">
-                <img src="./img/img5.png" alt="foto" width="280" height="260">
-                <h3>Martin Doe</h3>
-                <p>UI Designer</p>
+                <img src="./img/img5.png" alt="foto" width="278" height="260">
+                <h3 class="komand-name">Martin Doe</h3>
+                <p class="komand-text">UI Designer</p>
                 <ul class="social-links">
                     <li class="link-instagram"><a href="https://www.instagram.com" aria-label="instagram"></a></li>
                     <li class="link-twitter"><a href="https://twitter.com" aria-label="twitter"></a></li>
@@ -141,31 +141,29 @@
         </ul>
     </section>
     <!-- klienty -->
-    <section>
-        <h2>Постоянные клиенты</h2>
-        <ul class="klienty">
+    <section class="klienty">
+        <h2 class="klienty-title">Постоянные клиенты</h2>
+        <ul class="klienty-spisok">
             <li class="ya"><a href="ya" aria-label="ya"></a></li>
-            <li class="tagline"><a href="tagline" aria-label="tagline"></a></li>
-            <li class="company"><a href="company" aria-label="company"></a></li>
-            <li class="foster"><a href="foster" aria-label="foster"></a></li>
-            <li class="brand"><a href="brand" aria-label="brand"></a></li>
-            <li class="tag"><a href="tag" aria-label="tag"></a></li>
+            <li class="tagline"><a href="" aria-label=""></a></li>
+            <li class="company"><a href="" aria-label="company"></a></li>
+            <li class="foster"><a href="" aria-label="foster"></a></li>
+            <li class="brand"><a href="" aria-label="brand"></a></li>
+            <li class="tag"><a href="" aria-label="tag"></a></li>
         </ul>
     </section>
     </main>
     <!-- footer -->
-    <footer>
-        <address>
-            <a href="" class="logotyp"><span class="logo" >Web</span> Studio</a><br>
-            г. Киев, пр-т Леси Украинки, 26 
-        </address>
-        <address>
-                <a href="mailto:info@example.com">info@example.com</a><br>
-                <a href="tel:+380991111111">+38 099 111 11 11</a>
+    <footer class="footer">
+        <address class="address-titel">
+            <a class="logos-footer" href=""><span class="logotyp">Web</span> Studio</a> <br>
+            <span class="address-name">г. Киев, пр-т Леси Украинки, 26 </span><br>
+            <a class="address-info" href="mailto:info@example.com">info@example.com</a><br>
+            <a class="address-info" href="tel:+380991111111">+38 099 111 11 11</a>
         </address>
         <div>
-            <b>присоединяйтесь</b>
-            <ul class="social-links">
+            <b>ПРИСОЕДИНЯЙТЕСЬ</b>
+            <ul class="social-links-foot">
                 <li class="link-instagram"><a href="https://www.instagram.com" aria-label="instagram"></a></li>
                 <li class="link-twitter"><a href="https://twitter.com" aria-label="twitter"></a></li>
                 <li class="link-facebook"><a href="https://www.facebook.com" aria-label="facebook"></a></li>
