--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul class="nav-link">
                 <li><a class="posul-logo" href="">Студия</a></li>
                 <li><a class="posul-logo" href="">Портфолио</a></li>
-                <li><a class="posul-logo" href="">Контакты</a></liclass=>
+                <li><a class="posul-logo" href="">Контакты</a></li>
             </ul>
             <ul class="nav-line">
                 <li><a href="mailto:" class="nav-mail" aria-label="mail"></a>
