--- a/index.html
+++ b/index.html
@@ -5,167 +5,167 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     </head>
-<body class="wraper">
+<body>
     <header>
         <!-- Навігація -->
-        <nav class="nav">
-            <a class="logo" href=""><span class="logotyp">Web</span> Studio</a>
-            <ul class="nav-link">
-                <li><a class="posul-logo" href="">Студия</a></li>
-                <li><a class="posul-logo" href="">Портфолио</a></li>
-                <li><a class="posul-logo" href="">Контакты</a></li>
+        <nav>
+            <a href=""><span>Web</span> Studio</a>
+            <ul>
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
             </ul>
-            <ul class="nav-line">
-                <li><a href="mailto:" class="nav-mail" aria-label="mail"></a>
+            <ul>
+                <li><a href="mailto:" aria-label="mail"></a>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <li><a href="tel:+" class="tell" aria-label="tell"></a><span>+38 096 111 11 11</span></li>
+                <li><a href="tel:+" aria-label="tell"></a><span>+38 096 111 11 11</span></li>
             </ul>
         </nav>
     </header>
     <main>
             <!-- Банер -->
-    <section class="banner">
-        <h1 class="banner-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-        <button class="zakaz">
+    <section>
+        <h1>эффективные решения <br>для вашего бизнеса</h1>
+        <button >
             Заказать услугу 
         </button>
     </section>
     <!-- zanyattya -->
-    <section class="zanyattya">
+    <section>
         
-        <ul class="line">
+        <ul>
             <li>
-                <img class="antena" aria-label="antena" src="antena" alt="antena">
-                <h3 class="antena-title">Внимание к деталям</h3>
-                <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                <img aria-label="antena" src="./img/Antena.svg" alt="antena">
+                <h3>Внимание к деталям</h3>
+                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li>
-                <img class="clock" aria-label="clock" src="clock" alt="clock">
-                <h3 class="antena-title">Пунктуальность</h3>
-                <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <img  aria-label="clock" src="./img/Logo_clock.svg" alt="clock">
+                <h3>Пунктуальность</h3>
+                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
             <li>
-                <img class="computer" aria-label="computer" src="computer" alt="computer">
-                <h3 class="antena-title">Планирование</h3>
-                <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <img aria-label="computer" src="./img/logo_computer.svg" alt="computer">
+                <h3>Планирование</h3>
+                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li>
-                <img class="astronaut" aria-label="astronaut" src="astronaut" alt="astronaut">
-                <h3 class="antena-title">Современные технологии</h3>
-                <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <img aria-label="astronaut" src="./img/astronaut.svg" alt="astronaut">
+                <h3>Современные технологии</h3>
+                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
     </section>
     <!-- Riwennya -->
-    <section class="riwennya">
-        <h2 class="riwennya-title">Чем мы занимаемся</h2>
-        <ul class="line">
-            <li class="leptop">
-                <h3 class="punkt">Десктопные приложения</h3>
+    <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul> 
+            <li>
+                <h3 >Десктопные приложения</h3>
             </li>
-            <li class="box">
-                <h3 class="punkt">Мобильные приложения</h3>
+            <li>
+                <h3 >Мобильные приложения</h3>
             </li>
-            <li class="screen">
-                <h3 class="punkt">Дизайнерские решения</h3>
+            <li>
+                <h3 >Дизайнерские решения</h3>
             </li>
         </ul>   
     </section>
     <!-- Наша команда -->
-    <section class="nawa-komanda">
-        <h2 class="komanda-title">Наша команда</h2> 
-        <ul class="komand-line">
-            <li class="komand">
+    <section>
+        <h2 >Наша команда</h2> 
+        <ul>
+            <li>
                 <img src="./img/img2.png" alt="foto" width="278" height="260">
-                <h3 class="komand-name">John Smith</h3>
-                <p class="komand-text">Product Designer</p>
-                <!--помилка 1 <ul class="social-links">
-                    <li class="link"><img src="./img/instagram.svg" alt="icon"></li>
-                    <li class="link"><img src="./img/twitter.png" alt="icon"></li>
-                    <li class="link"><img src="./img/facebook.svg" alt="icon"></li>
-                    <li class="link"><img src="./img/linkedin.svg" alt="icon"></li>
+                <h3 >John Smith</h3>
+                <p>Product Designer</p>
+                <!--помилка 1 <ul>
+                    <li <img src="./img/instagram.svg" alt="icon"></li>
+                    <li <img src="./img/twitter.png" alt="icon"></li>
+                    <li <img src="./img/facebook.svg" alt="icon"></li>
+                    <li <img src="./img/linkedin.svg" alt="icon"></li>
                 </ul> -->
                  <!--помилка 2 <ul>
-                    <li class="link">
+                    <li 
                         <a href=""><img  src="./img/instagram.svg" alt="icon"></a></li>
-                    <li class="link">
+                    <li 
                         <a href=""><img src="./img/twitter.png" alt="icon"></a></li>
-                    <li class="link">
+                    <li 
                         <a href=""><img src="./img/facebook.svg" alt="icon"></a></li>
-                    <li class="link">
+                    <li 
                         <a href=""><img src="./img/linkedin.svg" alt="icon"></a></li>
                 </ul> -->
-                <ul class="social-links">
-                    <li class="link-instagram"><a href="https://www.instagram.com"  aria-label="instagram"></a></li>
-                    <li class="link-twitter"><a href="https://twitter.com" aria-label="twitter"></a></li>
-                    <li class="link-facebook"><a href="https://www.facebook.com" aria-label="facebook"></a></li>
-                    <li class="link-linkedin"><a href="https://www.linkedin.com/" aria-label="linkedin"></a></li>
+                <ul>
+                    <li><a href="https://www.instagram.com"  aria-label="instagram"></a></li>
+                    <li><a href="https://twitter.com" aria-label="twitter"></a></li>
+                    <li><a href="https://www.facebook.com" aria-label="facebook"></a></li>
+                    <li><a href="https://www.linkedin.com/" aria-label="linkedin"></a></li>
                 </ul>
             </li>
-            <li class="komand">
+            <li>
                 <img src="./img/img3.png" alt="foto" width="278" height="260">
-                <h3 class="komand-name">Marta Stewart</h3>
-                <p class="komand-text">Frontend Developer</p>
+                <h3 >Marta Stewart</h3>
+                <p>Frontend Developer</p>
                
-                <ul class="social-links">
-                    <li class="link-instagram"><a href="https://www.instagram.com" aria-label="instagram"></a></li>
-                    <li class="link-twitter"><a href="https://twitter.com" aria-label="twitter"></a></li>
-                    <li class="link-facebook"><a href="https://www.facebook.com" aria-label="facebook"></a></li>
-                    <li class="link-linkedin"><a href="https://www.linkedin.com/" aria-label="linkedin"></a></li>
+                <ul>
+                    <li><a href="https://www.instagram.com" aria-label="instagram"></a></li>
+                    <li><a href="https://twitter.com" aria-label="twitter"></a></li>
+                    <li><a href="https://www.facebook.com" aria-label="facebook"></a></li>
+                    <li><a href="https://www.linkedin.com/" aria-label="linkedin"></a></li>
                 </ul>
             </li>
-            <li class="komand">
+            <li>
                 <img src="./img/img4.png" alt="foto" width="278" height="260">
-                <h3 class="komand-name">Robert Jakis</h3>
-                <p class="komand-text">Marketing</p>
-                <ul class="social-links">
-                    <li class="link-instagram"><a href="https://www.instagram.com" aria-label="instagram"></a></li>
-                    <li class="link-twitter"><a href="https://twitter.com" aria-label="twitter"></a></li>
-                    <li class="link-facebook"><a href="https://www.facebook.com" aria-label="facebook"></a></li>
-                    <li class="link-linkedin"><a href="https://www.linkedin.com/" aria-label="linkedin"></a></li>
+                <h3 >Robert Jakis</h3>
+                <p>Marketing</p>
+                <ul>
+                    <li><a href="https://www.instagram.com" aria-label="instagram"></a></li>
+                    <li><a href="https://twitter.com" aria-label="twitter"></a></li>
+                    <li><a href="https://www.facebook.com" aria-label="facebook"></a></li>
+                    <li><a href="https://www.linkedin.com/" aria-label="linkedin"></a></li>
                 </ul>
             </li>
-            <li class="komand">
+            <li>
                 <img src="./img/img5.png" alt="foto" width="278" height="260">
-                <h3 class="komand-name">Martin Doe</h3>
-                <p class="komand-text">UI Designer</p>
-                <ul class="social-links">
-                    <li class="link-instagram"><a href="https://www.instagram.com" aria-label="instagram"></a></li>
-                    <li class="link-twitter"><a href="https://twitter.com" aria-label="twitter"></a></li>
-                    <li class="link-facebook"><a href="https://www.facebook.com" aria-label="facebook"></a></li>
-                    <li class="link-linkedin"><a href="https://www.linkedin.com/" aria-label="linkedin"></a></li>
+                <h3 >Martin Doe</h3>
+                <p>UI Designer</p>
+                <ul>
+                    <li><a href="https://www.instagram.com" aria-label="instagram"></a></li>
+                    <li><a href="https://twitter.com" aria-label="twitter"></a></li>
+                    <li><a href="https://www.facebook.com" aria-label="facebook"></a></li>
+                    <li><a href="https://www.linkedin.com/" aria-label="linkedin"></a></li>
                 </ul>
             </li>
         </ul>
     </section>
     <!-- klienty -->
-    <section class="klienty">
-        <h2 class="klienty-title">Постоянные клиенты</h2>
-        <ul class="klienty-spisok">
-            <li class="ya"><a href="ya" aria-label="ya"></a></li>
-            <li class="tagline"><a href="" aria-label=""></a></li>
-            <li class="company"><a href="" aria-label="company"></a></li>
-            <li class="foster"><a href="" aria-label="foster"></a></li>
-            <li class="brand"><a href="" aria-label="brand"></a></li>
-            <li class="tag"><a href="" aria-label="tag"></a></li>
+    <section>
+        <h2 >Постоянные клиенты</h2>
+        <ul>
+            <li><a href="" aria-label="ya"></a></li>
+            <li><a href="" aria-label="tagline"></a></li>
+            <li><a href="" aria-label="company"></a></li>
+            <li><a href="" aria-label="foster"></a></li>
+            <li><a href="" aria-label="brand"></a></li>
+            <li><a href="" aria-label="tag"></a></li>
         </ul>
     </section>
     </main>
     <!-- footer -->
-    <footer class="footer">
-        <address class="address-titel">
-            <a class="logos-footer" href=""><span class="logotyp">Web</span> Studio</a> <br>
-            <span class="address-name">г. Киев, пр-т Леси Украинки, 26 </span><br>
-            <a class="address-info" href="mailto:info@example.com">info@example.com</a><br>
-            <a class="address-info" href="tel:+380991111111">+38 099 111 11 11</a>
+    <footer>
+        <address>
+            <a href=""><span>Web</span> Studio</a> <br>
+            г. Киев, пр-т Леси Украинки, 26<br>
+            <a href="mailto:info@example.com">info@example.com</a><br>
+            <a href="tel:+380991111111">+38 099 111 11 11</a>
         </address>
         <div>
             <b>ПРИСОЕДИНЯЙТЕСЬ</b>
-            <ul class="social-links-foot">
-                <li class="link-instagram"><a href="https://www.instagram.com" aria-label="instagram"></a></li>
-                <li class="link-twitter"><a href="https://twitter.com" aria-label="twitter"></a></li>
-                <li class="link-facebook"><a href="https://www.facebook.com" aria-label="facebook"></a></li>
-                <li class="link-linkedin"><a href="https://www.linkedin.com/" aria-label="linkedin"></a></li>
+            <ul>
+                <li><a href="https://www.instagram.com" aria-label="instagram"></a></li>
+                <li><a href="https://twitter.com" aria-label="twitter"></a></li>
+                <li><a href="https://www.facebook.com" aria-label="facebook"></a></li>
+                <li><a href="https://www.linkedin.com/" aria-label="linkedin"></a></li>
             </ul>
         </div>
         <div>
